k8/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fsl-challenge
  namespace: production
  labels:
    app: fsl-challenge
spec:
  serviceName: fsl-challenge
  replicas: 3
  selector:
    matchLabels:
      app: fsl-challenge
  template:
    metadata:
      labels:
        app: fsl-challenge
    spec:
      containers:
        - name: fsl-challenge
          image: rdicidr:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
