k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-challenge
  namespace: production
spec:
  clusterIP: None
  selector:
    app: fsl-challenge
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
