k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsl-challenge
  namespace: production
spec:
  ingressClassName: nginx
  rules:
  - host: fsl-challenge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fsl-challenge
            port:
              number: 8080
